# wiki

./: .gitignore  404.html  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  eslint.config.mjs  index.html  makefile  mdx-components.tsx  mkdocs.yml  next.config.mjs  package.json  pyproject.toml  sitemap.xml  source.config.ts  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml  notify-discord.yml  release-please.yml  update-docs.yml
app/: layout.tsx  manifest.webmanifest  sitemap.ts
app/(home)/: layout.tsx  page.tsx
app/docs/: layout.tsx
app/docs/[[...slug]]/: page.tsx
app/generator/: page.tsx
app/llms-full.txt/: route.ts
app/llms.txt/: route.ts
components/: docker-compose-generator.tsx  search.tsx  star-counter.tsx
content/docs/: architecture.mdx  contribute.mdx  deployment.mdx  getting-started.mdx  index.mdx  meta.json  troubleshooting.mdx
content/docs/frontend/: item-page.mdx
content/docs/services/: content.mdx  extras.mdx  (+2 more)
contribute/: index.html
docs/: contribute.md  index.md
docs/frontend/: item_page.md
docs/services/: extras.md  index.md
frontend/item_page/: index.html
lib/: layout.shared.tsx  source.ts
overrides/partials/: header.html
overrides/stylesheets/: extra.css
search/: search_index.json
services/: index.html
services/content/: index.html
services/downloaders/: index.html
services/extras/: index.html
services/notifications/: index.html
services/scrapers/: index.html
services/subtitles/: index.html
services/symlink/: index.html
services/updaters/: index.html
stylesheets/: extra.css
(+19 files in other folders)
